--- a/callx/package.json
+++ b/callx/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.3.20",
+    "@material-ui/core": "^4.12.4",
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/checkbox": "0.4.2",
     "@react-native-community/clipboard": "1.5.1",
@@ -56,8 +57,9 @@
     "exponential-backoff": "3.1.0",
     "graphql": "15.5.0",
     "rc-progress": "^3.3.3",
-    "react": "16.13.1",
+    "react": "^16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-native": "0.63.3",
     "react-native-agora": "3.4.2",
@@ -67,8 +69,9 @@
     "react-native-keyboard-manager": "6.5.4-1",
     "react-native-responsive-fontsize": "0.5.1",
     "react-native-web": "0.14.13",
-    "react-router-dom": "5.2.0",
-    "react-router-native": "5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-router-native": "5.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "7.14.3",
