--- a/callx/package.json
+++ b/callx/package.json
@@ -59,6 +59,7 @@
     "rc-progress": "^3.3.3",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-native": "0.63.3",
